<resources>
    <string name="app_name">FFBFv1.4</string>
    <string name="name">name</string>
    <string name="description">description</string>
    <string name="save">save</string>
    <string name="email_hint">email</string>
    <string name="login_text">login</string>
    <string name="or_text">OR</string>
    <string name="create_text">Create Acount</string>
    <string name="get_started">GET STARTED</string>
    <string name="username">username</string>
    <string name="username_hint">username</string>
    <string name="firstname_hint">first name</string>
    <string name="surname_hint">surname</string>
    <string name="fname_txt">first name</string>
    <string name="sname_txt">surname</string>
    <string name="upload">upload</string>
    <string name="image_upload_screen_txt">image_ upload_screen</string>
    <string name="for_foodies_by_foodies">For Foodies By Foodies</string>
    <string name="email_address">email address</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="register_bt">Register</string>
    <string name="first_name_">first name</string>
    <string name="welcome">Welcome!</string>
    <string name="logout">Logout</string>
    <string name="email_address_title">Email address:</string>
    <string name="first_name_title">First name:</string>
    <string name="surname_title">Surname:</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="reset_password">reset password</string>
    <string name="todo">TODO</string>
    <string name="title_activity_bottom">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="restaurants">restaurants</string>
    <string name="foodstalls">foodstalls</string>
    <string name="profil">profil</string>
    <string name="back">back</string>
    <string name="submit">submit</string>
    <string name="left"><![CDATA[<<]]></string>
    <string name="right"><![CDATA[>>]]></string>
    <string name="textview">TextView</string>
    <string name="eatery_image">eatery image</string>
    <string name="image_detail">image detail</string>
    <string name="bookbtn">book</string>
    <string name="title_activity_maps">Map</string>

</resources>